--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -3,11 +3,50 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Анализатор страниц</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   </head>
-  <body>
-    <h1>Hello, world!</h1>
+  <body class="min-vh-100 d-flex flex-column">
+    <header class="flex-shrink-0">
+      <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
+        <a class="navbar-brand" href="/">Анализатор страниц</a>
+        <div id="navbarNav">
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="/urls">Сайты</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
+    </header>
+
+    {% if messages %}
+    {% for category, message in messages %}
+    <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
+    {% endfor %}
+    {% endif %}
+
+    <main class="flex-grow-1">
+      <div class="container-lg mt-3">
+        <h1>{% block headline1 %}{% endblock %}</h1>
+
+        {% block content %}
+        <div class="row">
+          <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
+            <h1 class="display-3">Анализатор страниц</h1>
+            <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
+            <form action="/urls " method="post" class="d-flex justify-content-center">
+            <label for="text" class="visually-hidden">Url для проверки</label>
+            <input type="text" name="url" placeholder="https://www.example.com"value="{{ url }}"  class="form-control form-control-lg" required>
+            <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
+            </form>
+          </div>
+        </div>
+        {% endblock %}
+
+      </div>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
 </html>
