add url checking interface

--- a/page_analyzer/templates/index.html
+++ b/page_analyzer/templates/index.html
@@ -9,11 +9,11 @@
   <body class="min-vh-100 d-flex flex-column">
     <header class="flex-shrink-0">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark px-3">
-        <a class="navbar-brand" href="/">Анализатор страниц</a>
+        <a class="navbar-brand" href="{{ url_for('show_home_page') }}">Анализатор страниц</a>
         <div id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link" href="/urls">Сайты</a>
+              <a class="nav-link" href="{{ url_for('show_all_urls') }}">Сайты</a>
             </li>
           </ul>
         </div>
@@ -35,7 +35,7 @@
           <div class="col-12 col-md-10 col-lg-8 mx-auto border rounded-3 bg-light p-5">
             <h1 class="display-3">Анализатор страниц</h1>
             <p class="lead">Бесплатно проверяйте сайты на SEO-пригодность</p>
-            <form action="/urls " method="post" class="d-flex justify-content-center">
+            <form action="{{ url_for('add_url') }}" method="post" class="d-flex justify-content-center">
             <label for="text" class="visually-hidden">Url для проверки</label>
             <input type="text" name="url" placeholder="https://www.example.com"value="{{ url }}"  class="form-control form-control-lg" required>
             <input type="submit" class="btn btn-primary  btn-lg ms-3 px-5 text-uppercase mx-3" value="Проверить">
